feat: ERP 시스템 초기 커밋 - 포트폴리오용
- Spring Boot 3 + React + TypeScript 기반 ERP 시스템
- 인사, 재고, 영업, 회계 모듈 포함
- JWT 인증 및 Spring Security 적용
- 멀티 리모트 관리 (GitLab 개발용, GitHub 포트폴리오용)
- 민감정보 제거된 공개용 버전